--- a/VS Code File/tablo2.html
+++ b/VS Code File/tablo2.html
@@ -15,9 +15,9 @@
             <td>Row 1 Cell 2</td>
             <td>Row 1 Cell 3</td>
         </tr>
-        <tr>
+        <tr align="center">
             <td>Row 2 Cell 2</td>
-            <td>ow 2 Cell 3</td>
+            <td>Row 2 Cell 3</td>
         </tr>
         <tr>
             <td colspan="3"> Row 3 Cell 1</td>
