--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <ul> <li> <a href= "index.html">Index Sayfası Hazırlama</a></li>
                         <li> <a href= "tablo2.html">Tablo 2</a></li>
                         <li> <a href= "#">Tablo 3</a></li></ul>
-            
+                         <li> <a href= "table1css.html">CSS kodlarıyla süslenmiş Tablo 1</a></li></ul>            
             </ul>
     
             </div>
