--- a/index.html
+++ b/index.html
@@ -54,7 +54,14 @@
                         <ul> <li> <a href= "index.html">Index Sayfası Hazırlama</a></li>
                         <li> <a href= "tablo2.html">Tablo 2</a></li>
                         <li> <a href= "#">Tablo 3</a></li></ul> 
-                        <li> <a href= "table1css.html">CSS kodlarıyla süslenmiş Tablo 1</a></li></ul>            
+                    <h1>3. Hafta (4)</h1>
+                        <li> <a href= "#">Formu Tablo İçine Al</a></li></ul> 
+                    <h1>4. Hafta (5)</h1>
+                        <li> <a href= "form1.html">Form 1</a></li></ul> 
+                        <li> <a href= "test1.html">Test 1</a></li></ul>
+                    <h1>5. Hafta (6)</h1>
+                        <li> <a href= "table1css.html">Görev 1 (Tablo x3) </a></li></ul>
+                        <li> <a href= "circles.html">Görev 2(circles)</a></li></ul>
             </ul>
     
             </div>
