--- a/index.html
+++ b/index.html
@@ -51,12 +51,10 @@
                 <h1>1. Hafta (2)</h1>
                     <ul> <li> <a href= "masal.html">Masal Sayfası</a></li></ul>
                     <h1>2. Hafta (3)</h1>
-                        <ul> <li> <a href= "index.html">Index Sayfası Hazırlama</a></li>
+                        <ul> <li> <a href= "tablo1.html">Tablo 1</a></li>
                         <li> <a href= "tablo2.html">Tablo 2</a></li>
                         <li> <a href= "#">Tablo 3</a></li></ul> 
                     <h1>3. Hafta (4)</h1>
-                        <li> <a href= "#">Formu Tablo İçine Al</a></li></ul> 
-                    <h1>4. Hafta (5)</h1>
                         <li> <a href= "form1.html">Form 1</a></li></ul> 
                         <li> <a href= "test1.html">Test 1</a></li></ul>
                     <h1>5. Hafta (6)</h1>
