--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <h1>2. Hafta (3)</h1>
                         <ul> <li> <a href= "tablo1.html">Tablo 1</a></li>
                         <li> <a href= "tablo2.html">Tablo 2</a></li>
-                        <li> <a href= "#">Tablo 3</a></li></ul> 
+                        <li> <a href= "tablo3.html">Tablo 3</a></li></ul> 
                     <h1>3. Hafta (4)</h1>
                         <li> <a href= "form1.html">Form 1</a></li></ul> 
                         <li> <a href= "test1.html">Test 1</a></li></ul>
