--- a/tablo1.html
+++ b/tablo1.html
@@ -6,7 +6,7 @@
 </head>
  
 <body>
-    <table border="2" width="350px" align="center" cellpadding="25" >
+    <table border="2" cellpadding="25" width="350px" align="center" >
         <tr>
             <th colspan="10">DERS PROGRAMIM</th>
         </tr>
