--- a/tablo3.html
+++ b/tablo3.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-        <table border="1">
+        <table border="1" align="center" >
             <tr> <td colspan="2"> <h1>Lütfen Formu Eksiksiz Doldurunuz.</h1> </td> </tr>
              <hr> <form>
                 <tr> <td colspan="2"> <h4>Hesap Bilgileriniz</h4> </td> </tr>
