--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
                         <li> <a href= "tablo2.html">Tablo 2</a></li>
                         <li> <a href= "tablo3.html">Tablo 3</a></li></ul> 
                     <h1>3. Hafta (4)</h1>
-                        <li> <a href= "form1.html">Form 1</a></li></ul> 
+                       <ul> <li> <a href= "form1.html">Form 1</a></li>
                         <li> <a href= "test1.html">Test 1</a></li></ul>
                     <h1>5. Hafta (6)</h1>
-                        <li> <a href= "table1css.html">Görev 1 (Tablo x3) </a></li></ul>
+                       <ul> <li> <a href= "table1css.html">Görev 1 (Tablo x3) </a></li>
                         <li> <a href= "circles.html">Görev 2(circles)</a></li></ul>
             </ul>
     
