--- a/masal.html
+++ b/masal.html
@@ -12,7 +12,13 @@
 <center> <h1> Okyanusun Kalbi</h1></center>
     <center> <img src="heart.png" width="300px" /> </center>
     <center> <p>
-        Bir varmış bir yokmuş, evvel zaman içinde kalbur saman içinde bir peri ülkesi varmış, bu peri ülkesinin içinde peri salonu yer almaktaymış. Peri salonunun ortasında çok gizemli ve görkemli olan okyanus kalbi yer almaktaymış. Okyanus kalbinden yiyecek ve yaşam kaynaklarını alıyorlarmış. Bir gün okyanusun kalbi çalınmış. Periler el birliğiyle kalbi aramaya ve yerine yerleştirmeye koyulmuşlar. Çok çaba göstermişler ve bu çaba en sonunda sonuç vermiş; kalbi yerine koymuşlar. Böylece sonsuza dek mutlu yaşamışlar.
+        <p>Bir varmış bir yokmuş, evvel zaman içinde kalbur saman içinde bir peri ülkesi varmış, bu peri ülkesinin içinde kocaman bir peri salonu yer almaktaymış. </p>
+        <p>Peri salonunun ortasında çok gizemli ve görkemli olan okyanus kalbi yer almaktaymış. </p>
+        <p>Okyanus kalbinden yiyecek ve yaşam kaynaklarını alıyorlarmış. </p>
+        <p>Bir gün okyanusun kalbi çalınmış. </p>
+       <p> Periler el birliğiyle kalbi aramaya ve yerine yerleştirmeye koyulmuşlar. </p>
+        <p>Çok çaba göstermişler ve bu çaba en sonunda sonuç vermiş; kalbi yerine koymuşlar.</p> 
+      <p>  Böylece sonsuza dek mutlu yaşamışlar.</p>
  </p>
 
 <h2>SON</h2>
