--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul>
                 <li> <a href= "index.html">Ana Sayfa</a></li>
                 <li> <a href= "#">Hakkımda</a></li>
-                <li> <a href= "#">İletişim</a></li>
+                <li> <a href= "iletisim.html">İletişim</a></li>
             </ul>
         </div>
         <Table width="150">
