--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <li> <a href= "test1.html">Test 1</a></li></ul>
                     <h1>5. Hafta (6)</h1>
                        <ul> <li> <a href= "table1css.html">Görev 1 (Tablo x3) </a></li>
-                        <li> <a href= "circles.html">Görev 2(circles)</a></li></ul>
+                        <li> <a href= "gorev2.html">Görev 2(circles)</a></li></ul>
             </ul>
     
             </div>
