--- a/masal.html
+++ b/masal.html
@@ -32,7 +32,7 @@
 	<br>
 	<br>
     <section id="bolum1"> 
-    <h2>Bölüm 1</h2>
+    <h2>Masalın Giriş Bölümü</h2>
 	<p>Bir varmış bir yokmuş, evvel zaman içinde kalbur saman içinde bir peri ülkesi varmış, bu peri ülkesinin içinde kocaman bir peri salonu yer almaktaymış.
 
         Peri salonunun ortasında çok gizemli ve görkemli olan okyanus kalbi yer almaktaymış.
