--- a/masal.html
+++ b/masal.html
@@ -29,7 +29,7 @@
 	<br>
 	<br>   
 <center> <h1> Sihirli Gökkuşağı </h1></center>
-<center> <img src="heart.png" width="300px" /> </center>
+<center> <img src="gok.jpg" width="300px" /> </center>
 <center> 
 	<br>
     <section id="bolum1"> 
