--- a/masal.html
+++ b/masal.html
@@ -14,14 +14,14 @@
     <div class="navbar">
 
 <center> <h1> Sihirli Gökkuşağı </h1></center>
-	    <div>
+	<center>     <div>
         <ul>
             <li> <a href="#bolum1">Masalın Giriş Bölümü</a>
             </li>
             <li> <a href="#bolum2">Masalın Son Bölümü</a>
 	    </li>
         </ul>
-    </div>
+    </div> </center>
 	<br>
 	<br>
 	<br>
