--- a/masal.html
+++ b/masal.html
@@ -14,14 +14,12 @@
     <div class="navbar">
 
 <center> <h1> Sihirli Gökkuşağı </h1></center>
-	<center>     <div>
-        <ul>
+	<center>
             <li> <a href="#bolum1">Masalın Giriş Bölümü</a>
             </li>
             <li> <a href="#bolum2">Masalın Son Bölümü</a>
 	    </li>
-        </ul>
-    </div> </center>
+       </center>
 	<br>
 	<br>
 	<br>
