--- a/masal.html
+++ b/masal.html
@@ -15,10 +15,10 @@
 
 <center> <h1> Sihirli Gökkuşağı </h1></center>
 	<center>
-            <li> <a href="#bolum1">Masalın Giriş Bölümü</a>
-            </li>
-            <li> <a href="#bolum2">Masalın Son Bölümü</a>
-	    </li>
+            <p> <a href="#bolum1">Masalın Giriş Bölümü</a>
+            </p>
+            <p> <a href="#bolum2">Masalın Son Bölümü</a>
+	    </p>
        </center>
 	<br>
 	<br>
