--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                        <ul> <li> <a href= "form1.html">Form 1</a></li>
                         <li> <a href= "test1.html">Test 1</a></li></ul>
                     <h1>5. Hafta (6)</h1>
-                       <ul> <li> <a href= "gorev1.html">Görev 1 (Tablo x3) </a></li>
+                       <ul> <li> <a href= "hafta5tablo.html">Görev 1 (Tablo x3) </a></li>
                         <li> <a href= "gorev2.html">Görev 2(circles)</a></li></ul>
             </ul>
     
