--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
                     <h1>5. Hafta (6)</h1>
                        <ul> <li> <a href= "hafta5tablo.html">Görev 1 (Tablo x3) </a></li>
                         <li> <a href= "gorev2.html">Görev 2(circles)</a></li></ul>
+                    <h1>7. Hafta (8)</h1>
+                       <ul> <li> <a href= "gridlayout.html">Grid Layout</a></li>
+                        <li> <a href= "mmm.html"></a></li></ul>
             </ul>
 
             </div>
