--- a/index.html
+++ b/index.html
@@ -53,9 +53,12 @@
                         <li> <a href= "test1.html">Test 1</a></li></ul>
                     <h1>5. Hafta (6)</h1>
                        <ul> <li> <a href= "hafta5tablo.html">Görev 1 (Tablo x3) </a></li>
-                        <li> <a href= "gorev2.html">Görev 2(circles)</a></li></ul>
-                    <h1>7. Hafta (8)</h1>
+                        <li> <a href= "gorev2.html">Görev 2(Circles)</a></li></ul>
+                    <h1>6. Hafta (7)</h1>
                        <ul> <li> <a href= "gridlayout.html">Grid Layout</a></li>
+                
+                     <h1>7. Hafta (8)</h1>
+                       <ul> <li> <a href= "animation.html">Görev 1(Animation)</a></li>
                         <li> <a href= "mmm.html"></a></li></ul>
             </ul>
 
