--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                        <ul> <li> <a href= "gridlayout.html">Grid Layout</a></li>
                     <h1>7. Hafta (8)</h1>
                        <ul> <li> <a href= "animation.html">Görev 1(Animation)</a></li>
-                        <li> <a href= "mmm.html"></a></li></ul>
+                        <li> <a href= "kartlar.html">Görev 2(Kartlar)</a></li></ul>
             </ul>
 
             </div>
