--- a/index.html
+++ b/index.html
@@ -42,21 +42,22 @@
     
         <div class="center">
             <ul> 
-                <h1>1. Hafta (2)</h1>
+                <h1>2. Hafta (3)</h1>
                     <ul> <li> <a href= "masal.html">Masal Sayfası</a></li></ul>
-                    <h1>2. Hafta (3)</h1>
+                    <h1>3. Hafta (4)</h1>
                         <ul> <li> <a href= "tablo1.html">Tablo 1</a></li>
                         <li> <a href= "tablo2.html">Tablo 2</a></li>
                         <li> <a href= "tablo3.html">Tablo 3</a></li></ul> 
-                    <h1>3. Hafta (4)</h1>
+                    <h1>4. Hafta (5)</h1>
                        <ul> <li> <a href= "form1.html">Form 1</a></li>
                         <li> <a href= "test1.html">Test 1</a></li></ul>
-                    <h1>5. Hafta (6)</h1>
+                    <h1>5./6. Hafta </h1>
                        <ul> <li> <a href= "hafta5tablo.html">Görev 1 (Tablo x3) </a></li>
                         <li> <a href= "gorev2.html">Görev 2(Circles)</a></li></ul>
-                    <h1>6. Hafta (7)</h1>
-                       <ul> <li> <a href= "gridlayout.html">Grid Layout</a></li>
-                           <h1>7. Hafta (8)</h1>
+                    <h1>7. Hafta (8)</h1>
+                       <ul> <li> <a href= "gridlayout.html">Görev 1(Grid Layout)</a></li>
+                           <li> <a href= "flex.html">Görev 2(Flex)</a></li></ul>
+                           <h1>8. Hafta (9)</h1>
                        <ul> <li> <a href= "animation.html">Görev 1(Animation)</a></li>
                         <li> <a href= "kartlar.html">Görev 2(Kartlar)</a></li></ul>
             </ul>
