--- a/iletisim.html
+++ b/iletisim.html
@@ -11,7 +11,7 @@
         <div class="navbar">
             <div class="logo">
                 <a href="index.html"> BİLGE
-            <div>        <img src="foto.jpg" width="150"> </div>
+            <div>        <img src="foto.png" width="150"> </div>
 
                 </a>
             
