Update and rename hafta10.html to hafta9.html

--- a/hafta9.html
+++ b/hafta9.html
@@ -11,7 +11,7 @@
 
 <script>
     var res=document.getElementById("resim")
-    var liste=new Array("a.jpg", "b.jpg","c.jpg");
+    var liste=new Array("a.jpg", "b.jpg","c.jpg", "d.jpg", "e.jpg", "f.jpg", "g.jpg", "h.jpg", "j.jpg", "k.jpg" );
     var r=Math.floor(liste.length*Math.random());
     res.src=liste[r];
 </script>
