--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
                            <h1>8. Hafta (9)</h1>
                        <ul> <li> <a href= "animation.html">Görev 1(Animation)</a></li>
                         <li> <a href= "kartlar.html">Görev 2(Kartlar)</a></li></ul>
+                       <h1>9. Hafta (10)</h1>
+                       <ul> <li> <a href= "hafta9.html">(Lab 9)</a></li> </ul>
             </ul>
 
             </div>
