--- a/hafta9.html
+++ b/hafta9.html
@@ -7,13 +7,23 @@
   
 </head>
 <body>
-   <img src="a.jpg" id="resim">
-
+   <img src="a.jpg" id="resim" width="50%">
+   <script>
+    var dizi=["#D24D57","#e74c3c","#f1c40f","#2c3e50","#8e44ad","#bdc3c7","#1abc9c","#3498db","#95a5a6"];
+    var renk=document.getElementById("renk");
+    renk.onclick=function(){
+    var rasgele=Math.floor(Math.random()*dizi.length);
+    document.body.style.backgroundColor=dizi[rasgele];
+    }
 <script>
     var res=document.getElementById("resim")
     var liste=new Array("a.jpg", "b.jpg","c.jpg", "d.jpg", "e.jpg", "f.jpg", "g.jpg", "h.jpg", "j.jpg", "k.jpg" );
     var r=Math.floor(liste.length*Math.random());
     res.src=liste[r];
 </script>
+
+     
+     
+    </script>
 </body>
 </html>
